续上次更改

--- a/source/_posts/基于时频分析和卷积神经网路的模式识别.md
+++ b/source/_posts/基于时频分析和卷积神经网路的模式识别.md
@@ -1,18 +1,16 @@
 ---
-title: Spectrum Analysis and Convolutional Neural Network for Automatic Modulation Recognition 
+title: 基于时频分析和卷积神经网路的模式识别
 date: {{ date }}
 author: dummerchen
 avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
 authorLink: dummerchen.tk
-categories: 技术
+categories: 转载
 comments: true
 tags: 转载
 keywords: paper
 description: 论文翻译
 photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119190225.jpg
 ---
-
-
 
 
 
