--- a/source/_posts/时间序列.md
+++ b/source/_posts/时间序列.md
@@ -1,5 +1,6 @@
 ---
 title: 时间序列
+mathjax: true
 date: {{ date }}
 author: dummerchen
 avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
