--- a/source/_posts/时间序列.md
+++ b/source/_posts/时间序列.md
@@ -1,7 +1,7 @@
 ---
 title: 时间序列
 mathjax: true
-date: {{ date }}
+date: {2020.12.19}
 author: dummerchen
 avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
 authorLink: dummerchen.tk
