美化头图，math公式修复

--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -31,21 +31,21 @@ photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/2020122
 
 
 * 显然赌注最少会在t-max(r,s)局结束，因为r，s相对大小不影响问题分析的结构，所以不妨假设r>s
-* 依据获胜概率来分赌注，即若记两人分别取得最后胜利的概率为P~A~ , P~B~ ,且P~A~ + P~B~ = 1,则两人应按照         P~A~ : P ~B~的比例分赌注。
+* 依据获胜概率来分赌注，即若记两人分别取得最后胜利的概率为$P_A$, $P_B$ ,且$P_A$ +$P_B$ = 1,则两人应按照         $P_A : P_B$的比例分赌注。
 * 没有人作弊，故假设两个人分别每一次博弈获胜的概率均为0.5，且博弈相互独立。
 
-| 事件 |          事件说明          |
-| :--: | :------------------------: |
-|  t   | 获得奖金最少需要获胜的次数 |
-|  r   |      A已经获胜的次数       |
-|  s   |      B已经获胜的次数       |
-|  i   |    比赛结束时的比赛次数    |
-|  M   |          总奖金数          |
-| P~A~ |      A先获胜t局的概率      |
-| P~B~ |      B先获胜t局的概率      |
-| P~a~ |      A获胜一局的概率       |
-| P~b~ |      B获胜一局的概率       |
-|      |                            |
+| 事件  |          事件说明          |
+| :---: | :------------------------: |
+|   t   | 获得奖金最少需要获胜的次数 |
+|   r   |      A已经获胜的次数       |
+|   s   |      B已经获胜的次数       |
+|   i   |    比赛结束时的比赛次数    |
+|   M   |          总奖金数          |
+| $P_A$ |      A先获胜t局的概率      |
+| $P_B$ |      B先获胜t局的概率      |
+| $P_a$ |      A获胜一局的概率       |
+| $P_b$ |      B获胜一局的概率       |
+|       |                            |
 
 ## 问题分析
 
@@ -53,7 +53,7 @@ photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/2020122
 
 设第i场博弈后,A获胜$P_{A(i)}=C_{i-1}^{t-r-1} P_a^{t-r-1}P_b^{i-1-(t-r-1)} *P_a$
 
- 	$将P_a=P_b=0.5带入化简得：P_{A(i)}=0.5^iC_{i-1}^{t-r-1} 对其求和P_A=\sum_{i=t-r}^{2t-r-s-1}P_{A(i)}$，
+$将P_a=P_b=0.5带入化简得：P_{A(i)}=0.5^iC_{i-1}^{t-r-1} 对其求和P_A=\sum_{i=t-r}^{2t-r-s-1}P_{A(i)}$，
 
 假设A，B每一局获胜概率相同，先赢得18局的人赢得赌注，并假设A胜10局且B胜7局的时候终止赌博，则有:
 $$
@@ -72,9 +72,11 @@ $$
 
 不妨设产生随机数为1则认为单局赌博A获胜，以**A获胜频率/仿真次数**视为概率可得仿真结果如下表
 
-| 仿真次数  | 100  | 1000 | 1万    | 10万    | 100万    |      |
-| --------- | ---- | ---- | ------ | ------- | -------- | ---- |
+| 仿真次数  | 100  | 1000 |  1万   |  10万   |  100万   |      |
+| :-------: | :--: | :--: | :----: | :-----: | :------: | ---- |
 | A获胜频率 | 0.74 | 0.75 | 0.7633 | 0.76064 | 0.759364 |      |
+|           |      |      |        |         |          |      |
+|           |      |      |        |         |          |      |
 
 
 
