--- a/source/_posts/时间序列.md
+++ b/source/_posts/时间序列.md
@@ -1,7 +1,7 @@
 ---
 title: 时间序列
 mathjax: true
-date: {2020.12.19}
+date: 2020.12.19
 author: dummerchen
 avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
 authorLink: dummerchen.tk
@@ -100,7 +100,7 @@ $$
 
 当预测目标的基本趋势是在某一水平上下波动时，可用一次简单移动平均方法建立预测模型
 
-$\hat y_{t+1}=M_t^{(1)}=\frac{1}{N}(y_t+...+y_{t-N+1}),t\in[N,T]$
+$ \hat y_{t+1}=M_t^{(1)}=\frac{1}{N}(y_t+...+y_{t-N+1}),t\in[N,T] $
 
 其预测标准误差为$S=\sqrt{\frac{\sum_{t=N+1}^{T}(\hat y_t-y_t)^2}{T-N}}$
 
