--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -7,7 +7,7 @@ avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
 authorLink: dummerchen.tk
 categories: 技术
 comments: true
-tags: 技术
+tags: 作业
 keywords: 
 photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151214.jpg
 ---
