删去番组，小改一波

--- a/source/_posts/线性规划.md
+++ b/source/_posts/线性规划.md
@@ -61,13 +61,13 @@ print(res.x)
 
 * 目标函数为非凸函数：
 
-    - [ ] 纯数学方法，求导 ~~头都求掉了~~
+    ​	纯数学方法，求导 ~~头都求掉了~~
 
-    - [ ] 深度学习 ~~个人感觉大材小用~~
+    ​	深度学习 ~~个人感觉大材小用~~
 
-    - [x] [scipy.optimize.minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)
+    ​	[scipy.optimize.minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)
 
-        具体也可参考[这个](https://blog.csdn.net/jiang425776024/article/details/87885969)
+    ​	具体也可参考[这个](https://blog.csdn.net/jiang425776024/article/details/87885969)
 
 
 
