--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -28,8 +28,6 @@ photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/2020122
 
 ## 假设
 
-
-
 * 显然赌注最少会在t-max(r,s)局结束，因为r，s相对大小不影响问题分析的结构，所以不妨假设r>s
 * 依据获胜概率来分赌注，即若记两人分别取得最后胜利的概率为$P_A$, $P_B$ ,且$P_A$ +$P_B$ = 1,则两人应按照         $P_A : P_B$的比例分赌注。
 * 没有人作弊，故假设两个人分别每一次博弈获胜的概率均为0.5，且博弈相互独立。
@@ -72,15 +70,10 @@ $$
 
 不妨设产生随机数为1则认为单局赌博A获胜，以**A获胜频率/仿真次数**视为概率可得仿真结果如下表
 
-| 仿真次数  | 100  | 1000 |  1万   |  10万   |  100万   |      |
-| :-------: | :--: | :--: | :----: | :-----: | :------: | ---- |
-| A获胜频率 | 0.74 | 0.75 | 0.7633 | 0.76064 | 0.759364 |      |
-|           |      |      |        |         |          |      |
-|           |      |      |        |         |          |      |
-
-
-
-
+| 仿真次数  | 100  | 1000 |  1万   |  10万   |
+| :-------: | :--: | :--: | :----: | :-----: |
+| A获胜频率 | 0.74 | 0.75 | 0.7633 | 0.76064 |
+|           |      |      |        |         |
 
 ## 代码
 
@@ -91,10 +84,8 @@ $$
 # @Author : Dummerfu
 # @Contact : https://github.com/dummerchen 
 # @Time : 2020/12/20 12:35
-
 import numpy as np
 from scipy.special import perm,comb
-
 t=18
 r=10
 s=7
@@ -108,9 +99,7 @@ if __name__ == "__main__":
     for i in range(t-r,2*t-r-s):
         print('i:' ,i)
         P_A=P_A+P_a(i)
-
     print(P_A)
-
 ```
 
 ### 仿真代码
