增加背景图

--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -29,7 +29,7 @@ photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/2020122
 ## 假设
 
 * 显然赌注最少会在t-max(r,s)局结束，因为r，s相对大小不影响问题分析的结构，所以不妨假设r>s
-* 依据获胜概率来分赌注，即若记两人分别取得最后胜利的概率为$P_A$, $P_B$ ,且$P_A$ +$P_B$ = 1,则两人应按照         $P_A : P_B$的比例分赌注。
+* 依据获胜概率来分赌注，即若记两人分别取得最后胜利的概率为$P_A$, $P_B$ ,且$P_A$ +$P_B$ = 1,则两人应按照$P_A : P_B$的比例分赌注。
 * 没有人作弊，故假设两个人分别每一次博弈获胜的概率均为0.5，且博弈相互独立。
 
 | 事件  |          事件说明          |
@@ -38,12 +38,11 @@ photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/2020122
 |   r   |      A已经获胜的次数       |
 |   s   |      B已经获胜的次数       |
 |   i   |    比赛结束时的比赛次数    |
-|   M   |          总奖金数          |
 | $P_A$ |      A先获胜t局的概率      |
 | $P_B$ |      B先获胜t局的概率      |
 | $P_a$ |      A获胜一局的概率       |
 | $P_b$ |      B获胜一局的概率       |
-|       |                            |
+|   M   |          总奖金数          |
 
 ## 问题分析
 
@@ -51,7 +50,7 @@ photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/2020122
 
 设第i场博弈后,A获胜$P_{A(i)}=C_{i-1}^{t-r-1} P_a^{t-r-1}P_b^{i-1-(t-r-1)} *P_a$
 
-$将P_a=P_b=0.5带入化简得：P_{A(i)}=0.5^iC_{i-1}^{t-r-1} 对其求和P_A=\sum_{i=t-r}^{2t-r-s-1}P_{A(i)}$，
+将$P_a=P_b=0.5$带入化简得：$P_{A(i)}=0.5^iC_{i-1}^{t-r-1}$ 对其求和$P_A=\sum_{i=t-r}^{2t-r-s-1}P_{A(i)}$，
 
 假设A，B每一局获胜概率相同，先赢得18局的人赢得赌注，并假设A胜10局且B胜7局的时候终止赌博，则有:
 $$
@@ -66,7 +65,7 @@ P_{A(i)}=C_{i-1}^{t-r-1} P_a^{t-r-1}P_b^{i-1-(t-r-1)} *P_a\\
 P_A=\sum_{i=t-r}^{2t-r-s-1}P_{A(i)}
 \end{cases}
 $$
-计算得P~A理论值~=0.7596588134765625
+计算得P~A理论值~=0.7596588134765625，故A应拿走$M * P_A$的奖金，B拿走剩下的奖金
 
 不妨设产生随机数为1则认为单局赌博A获胜，以**A获胜频率/仿真次数**视为概率可得仿真结果如下表
 
@@ -77,7 +76,7 @@ $$
 
 ## 代码
 
-### 计算理论值代码
+### 计算理论值概论代码
 
 ```python
 #-*- coding:utf-8 -*-
@@ -109,7 +108,6 @@ if __name__ == "__main__":
 # @Author : Dummerfu
 # @Contact : https://github.com/dummerchen 
 # @Time : 2020/12/20 12:55
-
 import matplotlib as mpl
 import numpy as np
 from matplotlib import pyplot as plt
@@ -142,10 +140,6 @@ if __name__ == "__main__":
                 if temps==t:
                     tot_B+=1
                     break
-
         print('tot_A:%d tot_B:%d P_A:%lf P_B:%lf' %(tot_A,tot_B,tot_A/echo,tot_B/echo))
-
-
-
 ```
 
