--- a/themes/Sakura/languages/zh-cn.yml
+++ b/themes/Sakura/languages/zh-cn.yml
@@ -43,13 +43,18 @@ insight:
 #category
 技术:
     zh: 野生技术协会
-    en: Geek – Only for Love
     img: https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.6/img/banner/coding.jpg
 生活:
     zh: 生活
-    en: live
     img: https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.6/img/banner/writing.jpg
 
 #tag
 悦读:
     img: https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.6/img/banner/reading.jpg
+
+随笔:
+    zh: 随笔
+    img: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160849.jpg
+转载:
+    zh: 转载
+    img: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160518.png
