--- a/source/_posts/线性规划.md
+++ b/source/_posts/线性规划.md
@@ -5,7 +5,7 @@ date: 2020.12.20
 author: dummerchen
 avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
 authorLink: dummerchen.tk
-categories: 知识
+categories: 技术
 comments: true
 tags: 数模
 keywords: 
