增加copyright，文章永久链接

--- a/source/_posts/我就是马克思.md
+++ b/source/_posts/我就是马克思.md
@@ -4,7 +4,7 @@ mathjax: false
 date: 2021.1.6
 author: dummerchen
 avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
-authorLink: dummerchen.tk
+authorLink: dummerfu.tk
 categories: 随笔
 comments: true
 tags: python
