fix permalink bug

--- a/source/_posts/基于时频分析和卷积神经网路的模式识别.md
+++ b/source/_posts/基于时频分析和卷积神经网路的模式识别.md
@@ -2,14 +2,16 @@
 title: 基于时频分析和卷积神经网路的模式识别
 date: 2020.12.10
 author: dummerchen
-avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
+avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 转载
 comments: true
 tags: 转载
 keywords: paper
 description: 论文翻译
-photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119190225.jpg
+photos: >-
+  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119190225.jpg
+abbrlink: 13246
 ---
 
 
