--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -3,13 +3,15 @@ title: 分赌注问题
 mathjax: true
 date: 2020.12.20
 author: dummerchen
-avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
+avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: 作业
-keywords: 
-photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151214.jpg
+photos: >-
+  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151214.jpg
+abbrlink: 466
+keywords:
 ---
 
 
