--- a/source/_posts/我就是马克思.md
+++ b/source/_posts/我就是马克思.md
@@ -3,13 +3,15 @@ title: 今天我就是马克思
 mathjax: false
 date: 2021.1.6
 author: dummerchen
-avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
+avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 随笔
 comments: true
 tags: python
-keywords: 
-photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115952.jpg
+photos: >-
+  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115952.jpg
+abbrlink: 15308
+keywords:
 ---
 
 #  练习题三：简答题
