--- a/source/_posts/时间序列.md
+++ b/source/_posts/时间序列.md
@@ -3,13 +3,15 @@ title: 时间序列
 mathjax: true
 date: 2020.12.19
 author: dummerchen
-avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
+avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: 数模
-keywords: 
-photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201218151450.jpg
+photos: >-
+  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201218151450.jpg
+abbrlink: 65094
+keywords:
 ---
 
 
