--- a/source/_posts/线性规划.md
+++ b/source/_posts/线性规划.md
@@ -3,13 +3,15 @@ title: 线性规划
 mathjax: true
 date: 2020.12.20
 author: dummerchen
-avatar: https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg
+avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: 数模
-keywords: 
-photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151658.jpg
+photos: >-
+  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151658.jpg
+abbrlink: 40439
+keywords:
 ---
 
 
