--- a/source/_posts/基于时频分析和卷积神经网路的模式识别.md
+++ b/source/_posts/基于时频分析和卷积神经网路的模式识别.md
@@ -1,7 +1,7 @@
 ---
 title: 基于时频分析和卷积神经网路的模式识别
 date: 2020.12.10
-author: dummerchen
+author: dummerfu
 avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 转载
