--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -2,7 +2,7 @@
 title: 分赌注问题
 mathjax: true
 date: 2020.12.20
-author: dummerchen
+author: dummerfu
 avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 技术
