--- a/source/_posts/我就是马克思.md
+++ b/source/_posts/我就是马克思.md
@@ -2,7 +2,7 @@
 title: 今天我就是马克思
 mathjax: false
 date: 2021.1.6
-author: dummerchen
+author: dummerfu
 avatar: 'https://wx1.sinaimg.cn/large/006bYVyvgy1ftand2qurdj303c03cdfv.jpg'
 authorLink: dummerfu.tk
 categories: 随笔
