add cloud tags style

--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -6,7 +6,7 @@ author: dummerfu
 authorLink: dummerfu.tk
 categories: 技术
 comments: true
-tags: 作业
+tags: 杂项
 photos: >-
   https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151214.jpg
 abbrlink: 466
