--- a/source/_posts/基于时频分析和卷积神经网路的模式识别.md
+++ b/source/_posts/基于时频分析和卷积神经网路的模式识别.md
@@ -5,8 +5,7 @@ author: dummerfu
 authorLink: dummerfu.tk
 categories: 转载
 comments: true
-tags: 转载
-keywords: paper
+tags: 论文
 description: 论文翻译
 photos: >-
   https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119190225.jpg
