--- a/source/_posts/我就是马克思.md
+++ b/source/_posts/我就是马克思.md
@@ -6,7 +6,7 @@ author: dummerfu
 authorLink: dummerfu.tk
 categories: 随笔
 comments: true
-tags: python
+tags: 随笔
 photos: >-
   https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115952.jpg
 abbrlink: 15308
