--- a/source/_posts/北斗文献综述.md
+++ b/source/_posts/北斗文献综述.md
@@ -1,3 +1,21 @@
+---
+title: 北斗文献综述
+mathjax: true
+date: 2020.12.20
+author: dummerfu
+authorLink: dummerfu.tk
+categories: 技术
+comments: true
+tags: 杂项
+description: 文献综述怎么写啊/(ㄒoㄒ)/~~
+photos: >-
+  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115147.jpg
+abbrlink: 
+keywords:
+---
+
+
+
 # 前言
 
 ​	我国北斗卫星导航系统是中国自行研制的[全球卫星导航系统](https://baike.baidu.com/item/全球卫星导航系统)，现在已经全部组网。北斗也是继GPS、GLONASS之后的第三个成熟的卫星导航系统。北斗卫星导航系统（BDS）和美国GPS、俄罗斯GLONASS、欧盟GALILEO，是联合国卫星导航委员会已认定的供应商。
