--- a/source/_posts/北斗文献综述.md
+++ b/source/_posts/北斗文献综述.md
@@ -1,7 +1,7 @@
 ---
 title: 北斗文献综述
 mathjax: true
-date: 2020.12.20
+date: 2021.1.18
 author: dummerfu
 authorLink: dummerfu.tk
 categories: 技术
@@ -10,7 +10,7 @@ tags: 杂项
 description: 文献综述怎么写啊/(ㄒoㄒ)/~~
 photos: >-
   https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115147.jpg
-abbrlink: 
+abbrlink: 60871
 keywords:
 ---
 
@@ -58,13 +58,13 @@ keywords:
 
 * 智能定位器：
 
-    > ​	主要通过在北斗高精度的定位功能，配合移动端app的指令实现一系列定位功能，比如智能放牧[^ 3],宠物防丢器设计[^4],远程定位老年痴呆患者[^5]，共享物流箱[^6]，清洁机器人[^7]等。 
+    > ​	主要通过在北斗高精度的定位功能，配合移动端app的指令实现一系列定位功能，比如智能放牧[^ 3],宠物防丢器设计[^ 4],远程定位老年痴呆患者[^ 5]，共享物流箱[^ 6]，清洁机器人[^ 7]等。 
 
-* 智能小车环境测试系统[^8]：
+* 智能小车环境测试系统[^ 8]：
 
     > ​	由于GPS成本提高，智能车成本使用十分高昂，但是基于北斗导航的导航定位、无线通信及低成本传感器的环境检测智能车系统，不仅提高了对复杂环境检测的能力，并且还降低了环境检测智能车的推广使用成本。
 
-* 农作物生长监控[^9]：
+* 农作物生长监控[^ 9]：
 
     > 农业生产中，农作物成长周期较长，其生长情况受到天气条件、土壤、水源以及施肥量等多种因素影 响。 在此过程中，针对农作物进行必要监控，强化种植过程管理工作，具有重要意义和价值。而BDS 系统的应用，可利用卫星定位技术发现目标农作物， 期间利用传感器装置传递农作物生长、病虫害信息。提升对农作物成长环境的技术监控，并对生产管理决策提供技术支撑。
 
@@ -83,20 +83,19 @@ keywords:
 # 参考文献
 
 [^ 1]:  杨秀锋.浅谈北斗卫星导航系统在交通运输行业的应用及展望.科技风,2020, (3):89.
+[^ 2]:  罗政.北斗卫星导航系统在应急预警信息发布中的应用.数字通信世界,2020, (2):27-28.
+[^ 3]: 王雅琴,曾逸翔,肖遥.基于北斗导航的智能牧导系统.农村经济与科技,2020, 31(22):4-6.
+[^ 4]: 汤致远,沈亮,余子龙等.基于北斗的智能宠物防丢器设计.物联网技术,2020, 10(11):89-90,93.
+[^ 5]: 吴建章,周缤灿,黄文乐.北斗卫星智能远程定位老年痴呆患者科学与财富.2016, (3):433-433.
+[^ 6]: 阮宏梁,卜晓斌,鲍秋杰.北斗定位智能共享物流箱系统设计.物流工程与管理.2020, 42(9):76-78.
+[^ 7]: 基龙鑫,袁练,荣忆宁等,于5G和北斗系统的高楼清洁机器人的设计和研究.通信电源技术,2020, 37(15):35-37.
+[^ 8]: 张树宁,王尔申,徐嵩等.基于北斗卫星导航的环境检测智能车系统设计.电子器件,2020, 43(5):1168-1172.
+[^ 9]: 郑巍 ,黄盛杰 ,陈智.北斗卫星导航系统在农业领域上的发展现状分析.农业装备技术,2020, 46(4):4-6.
+[^ 10]: 李金柱.一种基于5G+北斗的高精度定位系统.信息通信,2020, (1):85-86.
+[^ 11]: 宋思颖,徐纪曈,傅嘉滢 .“北斗3卫星系统+人工智能”构建未来智慧交通解决方案.中国航天.2018, (5):50-55.
+[^ 12]: 沈沛鸿 ,董强.一种基于5G+北斗的自动驾驶解决方案.信息通信,2020, (6):21-22.
 
-[^ 2]: 罗政.北斗卫星导航系统在应急预警信息发布中的应用.数字通信世界,2020, (2):27-28.
-
-[^ 3]:王雅琴,曾逸翔,肖遥.基于北斗导航的智能牧导系统.农村经济与科技,2020, 31(22):4-6.
-[^4]:汤致远,沈亮,余子龙等.基于北斗的智能宠物防丢器设计.物联网技术,2020, 10(11):89-90,93.
-[^5]:吴建章,周缤灿,黄文乐.北斗卫星智能远程定位老年痴呆患者科学与财富.2016, (3):433-433.
-[^6]:阮宏梁,卜晓斌,鲍秋杰.北斗定位智能共享物流箱系统设计.物流工程与管理.2020, 42(9):76-78.
-[^7]:基龙鑫,袁练,荣忆宁等,于5G和北斗系统的高楼清洁机器人的设计和研究.通信电源技术,2020, 37(15):35-37.
-[^8]:张树宁,王尔申,徐嵩等.基于北斗卫星导航的环境检测智能车系统设计.电子器件,2020, 43(5):1168-1172.
-[^9]:郑巍 ,黄盛杰 ,陈智.北斗卫星导航系统在农业领域上的发展现状分析.农业装备技术,2020, 46(4):4-6.
-[^ 10]:李金柱.一种基于5G+北斗的高精度定位系统.信息通信,2020, (1):85-86.
-[^ 11]:宋思颖,徐纪曈,傅嘉滢 .“北斗3卫星系统+人工智能”构建未来智慧交通解决方案.中国航天.2018, (5):50-55.
-[^ 12]:沈沛鸿 ,董强.一种基于5G+北斗的自动驾驶解决方案.信息通信,2020, (6):21-22.
-[^ 13]:于利娟,宋荣权,曹伟.基于北斗系统的银行智能提款箱锁研究数码设计(上).2020, 9(3):60-61.
+[^ 13]: 于利娟,宋荣权,曹伟.基于北斗系统的银行智能提款箱锁研究数码设计(上).2020, 9(3):60-61.
 
 
 
