add tip tag 试图修复代码刷新高亮不了的bug

--- a/source/_posts/时间序列.md
+++ b/source/_posts/时间序列.md
@@ -132,7 +132,7 @@ $$
 
 以$M_{t-1}^{(1)}$作为$y_{t-N}$的最佳估计，则有$M_{t-1}^{(1)}=\frac{y_t}{N}+(1-\frac{1}{N})M_{t-1}^{(1)} 令\alpha=\frac{1}{N},S_{t}^{(1)}$代替$M_{t}^{(1)}$则可得(13)
 
-$S_t^{(1)}=\alpha\sum_{j=0}^{\infty} (1-\alpha)^j y_{j-1}$ 此式表明 $S_t^{(1)}$是全部历史数据的加权平均，加权系数分别为*α*,*α*(1−*α*),*α*(1−*α*)^2^ ；显然有$\sum_{j=0}^{\infty} \alpha(1-\alpha)^j=1$  由于加权系数符合指数规律，又具有平滑数据的功能，故称为指数平滑。以这种平滑值进行预测，就是一次指数平滑法。预测模型为:
+$S_t^{(1)}=\alpha\sum_{j=0}^{\infty} (1-\alpha)^j y_{j-1}$ 此式表明 $S_t^{(1)}$是全部历史数据的加权平均，加权系数分别为$α,α(1−α),α(1−α)^2$ ；显然有$\sum_{j=0}^{\infty} \alpha(1-\alpha)^j=1$  由于加权系数符合指数规律，又具有平滑数据的功能，故称为指数平滑。以这种平滑值进行预测，就是一次指数平滑法。预测模型为:
 
 $\hat y_{t+1}=S_{t}^{(1)} \ \hat y_1=S_0^{(1)}$         即
 
@@ -159,7 +159,7 @@ $$
 S_{t}^{(1)}=\alpha y_t+(1-\alpha)S_{t-1}^{(1)}\\
 S_{t}^{(2)}=\alpha S_t^{(1)}+(1-\alpha)S_t^{(2)}\\
 $$
-式中$S_{t}^{(1)}$ 为一次指数的平滑值； $S_t^{(2)}$ 为二次指数的平滑值。当时间序列y~t~ ，从某时期开始具有直线趋势时，类似趋势移动平均法，可用**直线趋势模型**进行预测。还有一个趋势模型
+式中$S_{t}^{(1)}$ 为一次指数的平滑值； $S_t^{(2)}$ 为二次指数的平滑值。当时间序列$y_t$ ，从某时期开始具有直线趋势时，类似趋势移动平均法，可用**直线趋势模型**进行预测。还有一个趋势模型
 $$
 \hat y_{t+m}=a_t+b_tm\\
 \begin{cases}
