--- a/source/_posts/经典网络实现.md
+++ b/source/_posts/经典网络实现.md
@@ -396,3 +396,198 @@ if __name__ == "__main__":
 
 ```
 
+## AutoEncoder|VAE
+
+*这里是自定义训练，当然相比之下更复杂但是自由度也更高。*
+
+autoencoder就是两个自定义网络，先降维得到特征向量h，再升到原本维度就行了~~没什么技术含量，就不写了~~，关键是它的思路非常具有启发性。
+
+
+
+这里要注意的是mean,var Dense是两个Dense，即使计算方式一样但是要用两Dense,如果一个Dense算两次因为权重的原因结果是相同的，直接会导致图片越来越暗。
+
+先附上[tf.nn的几种损失函数区别](https://www.cnblogs.com/henuliulei/p/13742376.html)再附代码
+
+```python
+# -*- coding:utf-8 -*-
+# @Author : Dummerfu
+# @Contact : https://github.com/dummerchen 
+# @Time : 2021/2/22 21:55
+
+import os
+os.environ['TF_CPP_MIN_LOG_LEVEL']='2'
+import matplotlib as mpl
+from matplotlib import pyplot as plt
+import tensorflow as tf
+from tensorflow import keras
+from tensorflow.keras import layers
+from PIL import Image
+import numpy as np
+mpl.rcParams['font.sans-serif'] = 'SimHei'
+mpl.rcParams['axes.unicode_minus'] = False
+
+tf.random.set_seed(2345)
+# autoencoder 计算量很小batch可以大一点
+batch_size=512
+# 特征维数
+z_dims=20
+
+
+class VAE(keras.Model):
+    def __init__(self):
+        super(VAE,self).__init__()
+
+        #encoder
+        self.encoder=keras.Sequential([
+            keras.layers.InputLayer(input_shape=(28*28)),
+            keras.layers.Dense(128),
+        ])
+
+        self.meanfc=keras.layers.Dense(z_dims)
+        self.varfc=keras.layers.Dense(z_dims)
+        #decoder
+        self.decoder=keras.Sequential([
+            keras.layers.Dense(128, activation=tf.nn.relu),
+            keras.layers.Dense(784),
+        ])
+
+    def reparamize(self,mean,log_var):
+
+        eps=tf.random.normal(log_var.shape)
+        z=mean+eps*tf.exp(log_var*0.5)
+        return z
+
+    def call(self,inputs,training=None):
+        h=self.encoder(inputs)
+        
+        mean=self.meanfc(h)
+        log_var=self.varfc(h)
+        
+        z=self.reparamize(mean,log_var)
+        
+        outputs=self.decoder(z)
+
+        return outputs,mean,log_var
+
+def data2tensor(x,y):
+
+    x=tf.cast(x,dtype=tf.float32)/255.0
+    db=tf.data.Dataset.from_tensor_slices(x)
+    db=db.shuffle(batch_size*5).batch(batch_size)
+    return db
+
+def save_images(imgs,name):
+    new_im = Image.new('L', (280, 280))
+
+    index = 0
+    for i in range(0, 280, 28):
+        for j in range(0, 280, 28):
+            im = imgs[index]
+            im = Image.fromarray(im, mode='L')
+            new_im.paste(im, (i, j))
+            index += 1
+    new_im.save(name)
+
+def train_and_test(db_train,db_test):
+
+    model=VAE()
+    # model.build(input_shape=(4,784))
+    optimizer=tf.optimizers.Adam()
+    for epoch in range(100):
+        for step,x in enumerate(db_train):
+            # print(x.shape)
+            x=tf.reshape(x,[-1,784])
+
+            with tf.GradientTape() as tape:
+                x_hat,mean,log_var=model(x)
+                # 这里使用的这个loss是为了更好的收敛，使用其他的也行，但是要多训练
+                redu_loss=tf.nn.sigmoid_cross_entropy_with_logits(x,x_hat)
+
+                # 这里其实随便，reduce_mean(),reduce_sum()应该都行反正都是minimize loss
+                # reduce_mean()和reduce_sum()|reduce_sum/x.shape[0]训练结果完全不同..
+                # 但是后两者相似
+                redu_loss=tf.reduce_sum(redu_loss)/x.shape[0]
+
+                kl=-0.5*(log_var+1-mean**2-tf.exp(log_var))
+                # prekl=tf.reduce_mean(kl)
+                kl=tf.reduce_sum(kl)/x.shape[0]
+     
+                loss=redu_loss+kl*1.0
+            grads=tape.gradient(loss,model.trainable_variables)
+
+            optimizer.apply_gradients(zip(grads,model.trainable_variables))
+            if step%50==0:
+
+                print(epoch,step,"kl_loss:",kl,'loss:',loss,'x_shape0',x.shape[0])
+        # evaluation
+        z=tf.random.normal((batch_size,z_dims))
+        sample_x=model.decoder(z)
+        sample_x=tf.nn.sigmoid(sample_x)
+        sample_x = tf.reshape(sample_x, [-1, 28, 28]).numpy() * 255.
+        sample_x= sample_x.astype(np.uint8)
+
+        save_images(sample_x, 'vae_images/sample_epoch_%d.png' % epoch)
+
+
+        test_x = next(iter(db_test))
+        test_x,_,_= model(tf.reshape(test_x, [-1, 784]))
+        # [b, 784] => [b, 28, 28]
+        test_x=tf.nn.sigmoid(test_x)
+        test_x = tf.reshape(test_x, [-1, 28, 28])
+
+        # [b, 28, 28] => [2b, 28, 28]
+        test_x= test_x.numpy() * 255.
+        test_x = test_x.astype(np.uint8)
+        save_images(test_x, 'vae_images/test_epoch_%d.png' % epoch)
+
+    model.save_weights('./vae.h5')
+
+if __name__ == "__main__":
+    (x,y),(x_test,y_test)=keras.datasets.mnist.load_data()
+
+    l=int(len(x)*0.8)
+    print(x.shape, y.shape,l,28*28)
+    db_train=data2tensor(x[:l],y[:l])
+    db_val=data2tensor(x[l:],y[l:])
+    db_test=data2tensor(x_test,y_test)
+
+    train_and_test(db_train,db_val)
+
+```
+
+## Gan
+
+## 后记
+
+
+
+​	本来是想每一个经典网络都详细写的，但是感觉这样会导致太专业全是公式也不会有人去仔细看 ~~其实是我不会。~~结果变成了现在这种类似板子的东西。~~水博客才是原动力~~
+
+
+
+这里就随便总结一下：
+
+### 代码方面
+
+* keras.build(inputs_shape)：这里最好是使用tuple形式表示不然会报奇怪的错，tensorflow和pytorch不同这方面更加严格。
+* tf.losses： 这个模块里的函数大小写不同功能也是不同的，~~具体可以看官网~~，如果用complie建议用大小的函数，自定义算loss使用小写的函数
+* sigmod和softmax： 当'分类'事物不完全相互独立可以使用sigmod否则softmax，softmax一定要onehot 
+* model.save：这个因为保存了网络结构只能用在纯自定义网络里，继承类是不行的。
+
+
+
+### 网络等方面
+
+​	可以从代码中看出现有的几种网络构建格式。当初我也纠结了许多，最后还是准备使用gan网络的格式，毕竟框架好用是好用，但这是牺牲‘自由’换来的，对后期自主构建网络可能会起到反效果。~~每个人喜好不同，也不用太参考我的建议。~~
+
+​	k折验证等trick是视频里没有讲的（视频参考下面的学习资源），可以自己去看看相关trick。
+
+### 学习资源
+
+~~我才不是看到Gan可以随机生成老婆才想学Gan的~~
+
+发现日月光华的《tensorflow入门学习与实战的》资源没弄到，免费课程讲的确实好。
+
+就换成[龙书](https://github.com/dragen1860/Deep-Learning-with-TensorFlow-book)学Gan顺便复习了一遍经典网络，顺便附上[李宏毅讲解的Gan网络](https://www.bilibili.com/video/BV1tE411Z78A?p=3)（每次看完这种视频都感觉概率论白学了
+
+emmm，再附上别人整理的[深度学习路线](https://leemeng.tw/deep-learning-resources.html)吧 ~~应该不会有人看的完~~
