终于完全修复toc，代码高亮

--- a/source/_posts/经典网络实现.md
+++ b/source/_posts/经典网络实现.md
@@ -16,7 +16,7 @@ keywords:
 
 ## 前言
 
-<div class="tip error">不太喜欢看别人的代码,自己实现一遍经典网络,熟悉keras api</div>
+<div class="tip error">看不懂别人的代码,自己实现一遍经典网络,熟悉keras api</div>
 
  <div class="tip success"> 水篇博客 </div>
 
@@ -557,25 +557,49 @@ if __name__ == "__main__":
 
 ## Gan
 
+### WGAN原理
+
+GAN一直面临着G,D训练困难、G,D的损失函数与训练好坏无关等问题，在此基础上便提出了WGAN，相对于传统的GAN,WGAN只做了几点改动确有很好的效果
+
+* D的最后一层去掉sigmod
+* G,Dloss不取log
+* 每次更新D的参数后做一个梯度惩罚（gradient penalty）
+
+GAN的原本损失函数为
+$$
+E_{z \in p_z(z)}[log(1-D(G(z)))]
+$$
+但是这样导致了如果D太好了G则训练不到有效的梯度，G太好了D又训练不到有效的梯度
+
+所以WGAN的损失函数改为了
+$$
+E_{z\in p_z(z)}[-logD(G(z))] = KL(P_g||P_{data})-2JS(P_{data}||P_g) 
+$$
+WGAN理论上给出了GAN训练不稳定的原因，即交叉熵（JS散度）不适合衡量具有不相交部分的分布之间的距离，转而使用wassertein距离去衡量生成数据分布和真实数据分布之间的距离，理论上解决了训练不稳定的问题。
+
+​	WGAN相对于DCGAN，WGAN虽然收敛时间更长但是更稳定，所以对于更复杂网络来说更倾向于WGAN，比如使用resnet可以达到更好的结果。
+
+### code
+
 *generator里的反卷积参数必须最后要计算结果能吻合Discriminator的input_shape*
 
 因为要在batchnorm后面做激活所以不能像之前一样在卷积层里面激活。
 
-这是我自己的wgan跑3000个epoch后的结果，可以明显看出学习到了头发和眼睛
+这是我自己的wgan跑3000个epoch后的结果，可以明显看出学习到了头发和眼睛(相比之下别人调的参太牛了)
 
 ![wg_img_3400](https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210227002207.jpg)
 
 
 
-数据集kaggle上随便找，如果非想用龙书里面的提到的[数据集](https://zhuanlan.zhihu.com/p/24767059)似乎得自己爬（在爬了，在爬了
+数据集kaggle上随便找~~啊，kaggle真香，各方意义上~~，龙书里面的提到的数据集在这里https://pan.baidu.com/s/1Yn53uxFLCbja13_6Ay44MA数据集来源在[这里](https://zhuanlan.zhihu.com/p/24767059),我开始没看issue没找到这个数据集，爬到一半才看到😓
 
-~~啊，kaggle真香，各方意义上~~
+我爬的数据在[这]()
 
 我写的gan参数太差了，看龙书说跑3万次似乎能得到比较好的效果？算了直接上别人已经调好参的WGAN代码吧，知乎那个调好参的DCGAN太猛了，300epoch居然就成型了orz（虽然我没跑
 
 ### train函数
 
-```
+```python
 import os
 os.environ['TF_CPP_MIN_LOG_LEVEL']='2'
 import glob
@@ -683,18 +707,10 @@ def save_result(val_out, val_block_size, image_path, color_mode):
 
 
 def celoss_ones(logits):
-    # [b, 1]
-    # [b] = [1, 1, 1, 1,]
-    # loss = tf.keras.losses.categorical_crossentropy(y_pred=logits,
-    #                                                y_true=tf.ones_like(logits))
-    return - tf.reduce_mean(logits)
+   	return - tf.reduce_mean(logits)
 
 
 def celoss_zeros(logits):
-    # [b, 1]
-    # [b] = [1, 1, 1, 1,]
-    # loss = tf.keras.losses.categorical_crossentropy(y_pred=logits,
-    #                                                y_true=tf.zeros_like(logits))
     return tf.reduce_mean(logits)
 
 
@@ -786,7 +802,7 @@ def main():
 
 
     for epoch in range(epochs):
-
+		# 训练5次discriminator 再训练一次generator！！！不然就会出现像我一样的图
         for _ in range(5):
             batch_z = tf.random.normal([batch_size, z_dim])
             batch_x = next(db_iter)
@@ -819,7 +835,7 @@ if __name__ == '__main__':
 
 ### datasetload 函数
 
-```
+```python
 import multiprocessing
 
 import tensorflow as tf
@@ -971,7 +987,9 @@ def disk_image_batch_dataset(img_paths,
     return dataset
 ```
 
+1000epoch之后是这样
 
+![wgansample-1000](https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210227110619.png)
 
 ## 后记
 
@@ -981,7 +999,7 @@ def disk_image_batch_dataset(img_paths,
 
 ​	终于体会到电脑的苦了，cpu占用率*99%* 还要开多线程同时爬图片…（虽然现在字都显示不出来了
 
-这里就随便总结一下学习的经验吗：
+这里就随便总结一下学习的经验：
 
 ### 代码方面
 
