--- a/source/_posts/经典网络实现.md
+++ b/source/_posts/经典网络实现.md
@@ -26,121 +26,77 @@ keywords:
 
 可能网络会有错误,但是无伤大雅,知道如何构建就行 ~~反正以后经典网络可以直接导入~~
 
+不过在之前要先了解一下模型保存不同格式的区别~~以防模型实现了不会保存~~
+
+## 模型保存
+
+[TF官网](https://tensorflow.google.cn/guide/keras/save_and_serialize?hl=zh-cn)
+
+### Save_model格式
+
+这个是最简单粗暴的模型保存方法了。
+
+保存的模型将包括：
+
+- 模型的架构/配置
+- 模型的权重值（在训练过程中学习）
+- 模型的编译信息（如果调用了 `compile()`）
+- 优化器及其状态（如果有的话，使您可以从上次中断的位置重新开始训练）
 
 
-## VGG
 
-​	这里使用keras的高级api来构建网络,当然使用Sequential也可以实现同样的效果.
+
 
 ```python
-# -*- coding:utf-8 -*-
-# @Author : Dummerfu
-# @Contact : https://github.com/dummerchen 
-# @Time : 2021/2/19 20:48
+# 保存为dirname_path路径下文件名为dirname的文件夹
 
-import os
-os.environ['TF_CPP_MIN_LOG_LEVEL']='2'
-import datetime
-import  tensorflow as tf
-from  tensorflow import  keras
+model.save(dirname_path)
+```
 
 
-BATCHSIZE=32
+
+### H5格式
 
 
-def preprocess(x,y):
-    print('pre',x.shape,y.shape)
 
-    x=2*tf.cast(x,dtype=tf.float32)/255.0 -1
-    y = tf.squeeze(y)
-    y=tf.cast(y,dtype=tf.int32)
-    y=tf.one_hot(y,depth=100)
-    print('after:',x.shape,y.shape)
-    return  x,y
+> Keras 还支持保存单个 HDF5 文件，其中包含模型的架构、权重值和 `compile()` 信息。它是 SavedModel 的轻量化替代选择。
 
-def data2tensor(x,y):
+但是同时因为只有一个h5文件与 SavedModel 格式相比，H5 文件不包括以下两方面内容：
 
-    db=tf.data.Dataset.from_tensor_slices((x,y))
-    db=db.map(preprocess)
-    db=db.shuffle(5000).batch(BATCHSIZE)
+- 通过 `model.add_loss()` 和 `model.add_metric()` 添加的**外部损失和指标**不会被保存（这与 SavedModel 不同）。如果您的模型有此类损失和指标且您想要恢复训练，则您需要在加载模型后自行重新添加这些损失。请注意，这不适用于通过 `self.add_loss()` 和 `self.add_metric()` 在层内创建的损失指标。只要该层被加载，这些损失和指标就会被保留，因为它们是该层 `call` 方法的一部分。
+- 已保存的文件中**不包含自定义对象（如自定义层）的计算图**。
 
-    return db
+```python
+# 只需要在文件名后加.h5后缀即可
+model.save(name.h5)
+```
 
-def VGG(image_shape,n_class):
-
-    print(image_shape[0],image_shape[1],image_shape[2])
-    inputs = keras.Input(shape=[image_shape[0],image_shape[1],image_shape[2]])
-
-    x=keras.layers.Conv2D(64, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(inputs)
-    x=keras.layers.Conv2D(64, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x=keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
-
-    x= keras.layers.Conv2D(128, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(128, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
-
-    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
-
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
-
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
-    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
-
-    x= keras.layers.Flatten()(x)
-    x= keras.layers.Dense(4096, activation=keras.activations.relu, use_bias=True)(x)
-    x= keras.layers.Dense(4096, activation=keras.activations.relu, use_bias=True)(x)
-
-    outputs= keras.layers.Dense(n_class, activation=keras.activations.softmax, use_bias=True)(x)
-    # 基于Model方法构建模型
-    model = keras.Model(inputs=inputs, outputs=outputs)
-
-    return model
-
-def train(train_db,val_db,is_train=False):
-    model = VGG([32,32,3],n_class=100)
-
-    model.compile(
-        optimizer=tf.optimizers.Adam(),
-        loss=tf.losses.CategoricalCrossentropy(),
-        metrics=['accuracy'],
-    )
-
-    path = os.path.abspath('./')
-    log_dir = path + '\\logs\\' + datetime.datetime.now().strftime("%Y%m%d-%H%M")
-    print(log_dir)
-    tensorboard = keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)
-    model.summary()
-    if is_train:
-
-        model.fit(train_db, validation_data=val_db, validation_freq=1, epochs=5, callbacks=[tensorboard])
-
-        model.save_weights('./vgg16.h5')
+###　checkpoints
 
 
-(x,y),(x_test,y_test)=keras.datasets.cifar100.load_data()
-print('pre',x.shape,y.shape)
 
-train_db=data2tensor(x,y)
-test_db=data2tensor(x_test,y_test)
+### 保存时附带签名
 
-train(train_db=train_db,val_db=test_db,is_train=False)
+```python
+class Model(tf.keras.Model):
+
+    @tf.function
+    def call(self, x):
+      ...
+
+  m = Model()
+  tf.saved_model.save(
+      m, '/tmp/saved_model/',
+      signatures=m.call.get_concrete_function(
+          tf.TensorSpec(shape=[None, 3], dtype=tf.float32, name="inp")))
 
 ```
 
 
 
 ## ResNet
+
+### 手写实现
 
 不同的ResNet只有结构不同,unit是相同的只需要改变layer_dims就可以实现了
 
@@ -293,6 +249,142 @@ def main():
 
 main()
 ```
+
+### 自带api实现
+
+因为application里面都有，功能都类似故后面不再赘述
+
+<div class="tips warning"> tf.kears.application.resnet50.Resnet50与tf.kears.application.Resnet50的功能都一样</div>
+
+
+
+```python
+from tensorflow.keras.applications import *
+
+model=ResNet50(weights='./resnet50_weights_tf_dim_ordering_tf_kernels.h5')
+path='./cat.jpg'
+# 读入图片
+image=image_preprocess.img_decoder(path)
+
+pre1=model.predict(image)
+# 这个能使标签对应起来
+pre=resnet50.decode_predictions(pre1)
+print(pre)
+```
+
+
+
+## VGG
+
+​	这里使用keras的高级api来构建网络,当然使用Sequential也可以实现同样的效果.
+
+```python
+# -*- coding:utf-8 -*-
+# @Author : Dummerfu
+# @Contact : https://github.com/dummerchen 
+# @Time : 2021/2/19 20:48
+
+import os
+os.environ['TF_CPP_MIN_LOG_LEVEL']='2'
+import datetime
+import  tensorflow as tf
+from  tensorflow import  keras
+
+
+BATCHSIZE=32
+
+
+def preprocess(x,y):
+    print('pre',x.shape,y.shape)
+
+    x=2*tf.cast(x,dtype=tf.float32)/255.0 -1
+    y = tf.squeeze(y)
+    y=tf.cast(y,dtype=tf.int32)
+    y=tf.one_hot(y,depth=100)
+    print('after:',x.shape,y.shape)
+    return  x,y
+
+def data2tensor(x,y):
+
+    db=tf.data.Dataset.from_tensor_slices((x,y))
+    db=db.map(preprocess)
+    db=db.shuffle(5000).batch(BATCHSIZE)
+
+    return db
+
+def VGG(image_shape,n_class):
+
+    print(image_shape[0],image_shape[1],image_shape[2])
+    inputs = keras.Input(shape=[image_shape[0],image_shape[1],image_shape[2]])
+
+    x=keras.layers.Conv2D(64, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(inputs)
+    x=keras.layers.Conv2D(64, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x=keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
+
+    x= keras.layers.Conv2D(128, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(128, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
+
+    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(256, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
+
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
+
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.Conv2D(512, kernel_size=[3, 3], strides=[1, 1], activation=keras.activations.relu,padding='same')(x)
+    x= keras.layers.MaxPooling2D(pool_size=[2, 2], strides=[2, 2], padding='same')(x)
+
+    x= keras.layers.Flatten()(x)
+    x= keras.layers.Dense(4096, activation=keras.activations.relu, use_bias=True)(x)
+    x= keras.layers.Dense(4096, activation=keras.activations.relu, use_bias=True)(x)
+
+    outputs= keras.layers.Dense(n_class, activation=keras.activations.softmax, use_bias=True)(x)
+    # 基于Model方法构建模型
+    model = keras.Model(inputs=inputs, outputs=outputs)
+
+    return model
+
+def train(train_db,val_db,is_train=False):
+    model = VGG([32,32,3],n_class=100)
+
+    model.compile(
+        optimizer=tf.optimizers.Adam(),
+        loss=tf.losses.CategoricalCrossentropy(),
+        metrics=['accuracy'],
+    )
+
+    path = os.path.abspath('./')
+    log_dir = path + '\\logs\\' + datetime.datetime.now().strftime("%Y%m%d-%H%M")
+    print(log_dir)
+    tensorboard = keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)
+    model.summary()
+    if is_train:
+
+        model.fit(train_db, validation_data=val_db, validation_freq=1, epochs=5, callbacks=[tensorboard])
+
+        model.save_weights('./vgg16.h5')
+
+
+(x,y),(x_test,y_test)=keras.datasets.cifar100.load_data()
+print('pre',x.shape,y.shape)
+
+train_db=data2tensor(x,y)
+test_db=data2tensor(x_test,y_test)
+
+train(train_db=train_db,val_db=test_db,is_train=False)
+
+```
+
+
 
 ## LSTM
 
