--- a/source/_posts/退役有感.md
+++ b/source/_posts/退役有感.md
@@ -46,4 +46,4 @@ keywords:
 
 ## 结语
 
-以上都仅仅是建议和胡说，仅代表本人的想法，你大可不必看这篇文章。每个人有每个人的想法，求同存异就好。
+以上都仅仅是建议和胡说，仅代表本人的想法，你大可不必看这篇文章。每个人有每个人的想法，求同存异就好。说不定也不退役了(●'◡'●)
