--- a/source/_posts/信号之谜.md
+++ b/source/_posts/信号之谜.md
@@ -1,5 +1,5 @@
 ---
-title: '信号'之谜
+title: 信号之谜
 mathjax: true
 date: 2021.5.10
 author: dummerfu
@@ -9,11 +9,11 @@ comments: true
 tags: 杂项
 photos: >-
   https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210507235144.jpg
-abbrlink: 
+abbrlink: 22895
 keywords:
 ---
 
-### '信号'之谜
+#  '信号'之谜
 
 ​	虽然已经学习了近半个学期的信号与系统，但是我一直有个疑问，什么是信号？？？为什么光，电甚至一张图片也算是信号？
 
