--- a/source/_posts/美多商城.md
+++ b/source/_posts/美多商城.md
@@ -627,21 +627,23 @@ CACHES = {
 
 当务之急是恶补ML基础所以接下来可能按这方面走了：
 
-> <div class="checkbox red">
->     <input type='checkbox'>
->     <p>Mobilenet学习和代码复现</p>
+> <div class="checkbox red checked">
+>  <input type='checkbox' checked="checked">
+>  <p>Mobilenet学习和代码复现</p>
 > </div>
 >
 > <div class="checkbox red">
->     <input type='checkbox'>
->     <p>Effient Net学习和代码复现</p>
+>  <input type='checkbox' >
+>  <p>Effient Net学习和代码复现</p>
 > </div>
 >
+>
 > <div class="checkbox red">
->     <input type='checkbox'>
->     <p>尝试VP <a href="https://www.kaggle.com/c/vinbigdata-chest-xray-abnormalities-detection/">VinBigData Chest X-ray Abnormalities Detection</a></p>
+>  <input type='checkbox'>
+>  <p>尝试VP <a href="https://www.kaggle.com/c/vinbigdata-chest-xray-abnormalities-detection/">VinBigData Chest X-ray Abnormalities Detection</a></p>
 > </div>
 
 
 
 <div class='tip accept'>To be contiune…</div>
+
