--- a/source/_posts/内网穿透工具.md
+++ b/source/_posts/内网穿透工具.md
@@ -31,7 +31,7 @@ keywords:
 
 
 
-废话不多说，下面开始软件测评环节。
+废话不多说，下面开始软件测评环节。~~绝对中立的评测，无恰饭（也没资本恰饭~~
 
 # 常用工具
 
@@ -43,7 +43,9 @@ keywords:
 
 ## 花生壳
 
-* 配置：无需配置，官网教程详细~~这么贵还不详细谁会用啊~~
+~~全靠广告撑起来，本人没付费使用过，但是贵是确实~~
+
+* 配置：无需配置，官网教程详细 ~~这么贵还不详细谁会用啊~~
 * 流量：有限，免费只有1G？
 * 带宽：1G带宽
 * 协议：白嫖只有tcp
@@ -54,23 +56,56 @@ keywords:
 * 配置：简单易上手
 * 流量：不限量
 * 协议：tcp，http等都支持
-* 带宽：免费只有1M带宽 ~~比肩百度云~~
+* 带宽：免费只有1M带宽 
 * 综合：虽然不限量，只有1M带宽但是看情况还是可以用
 
 
+
+## Nat123 和 (NetTunnel)[https://console.uulap.com/#]
+
+​	Net123不充值只能映射80端口，收费与花生壳相比还是便宜一点。~~页面还是上个年代的样子，丑不可言~~
+
+NetTunnel就相对人性化，页面好看文档也全，和NetApp差不多，但是多了个客户端启动，带宽也还是1M。
 
 ## FRP
 
 需要自带服务器等，不能白嫖，企业使用。
 
-## [zeroiter](https://www.zerotier.com/)	
+## [Zeroiter](https://www.zerotier.com/)
 
 ​	[知乎使用教程](https://zhuanlan.zhihu.com/p/83849371)
 
-​	私人用可以，是另类的内网穿透，是通过创建虚拟网卡，使安装这个软件的人可以加入到同一个局域网从而实现''内网穿透''效果。
+​	私人用可以，是另类的内网穿透，是通过创建虚拟网卡，使安装这个软件的人可以加入到同一个局域网从而实现''内网穿透''效果，但是要至少两个设备。~~对于玩联机游戏等场景的十分好用~~
 
-​	应用场景不同，不予评价。~~对于玩联机游戏等场景的十分好用~~
+​	傻瓜安装操作，但是server端似乎需要fq，所以对于小白也不怎么好用。
 
-## [holoer](https://github.com/wisdom-projects/holer-client)
+## [Holoer](https://github.com/wisdom-projects/holer-client)
 
-* 配置：难懂，未曾配置成功，不予测评。
+* 配置：难懂，未配置成功。
+
+## [Sakura Frp](https://www.natfrp.com/user/)
+
+~~[noionion](https://noionion.top/)推荐的，这么好的东西我都搜不到，看来我信息检索能力还有待提高~~
+
+只能说完爆上面NatXX
+
+* 配置：可以说是十分详细了，应该不会有人看不懂
+* 流量：每天10G?,还有签到流量。
+* 协议：tcp等都支持，而且支持自绑域名
+* 带宽：免费是限速10M，超流量后限速4M
+
+吐槽：~~这页面做的和某机场一样让我第一眼还以为进错了网站~~，
+
+首先这个不是完全白嫖，会有个需要1rmb的实名认证，实名认证之后才可以用。然后写着限速10M，但是我下载似乎是跑不满，可能是我自己的带宽不太够跑不满。这个你们可以自己测测。
+
+总之还是非常好用的，毕竟只用1rmb就做到了常人难以做到的事~~滑稽~~。
+
+## 总结
+
+* 白嫖无果 —- 相比之下NetApp和NetTunnel除了1M带宽还是好用的，学习或者测试web 1M带宽将就将就也还行。
+* 微氪可以选择Sakura Frp，毕竟1rmb可以享受的权益和其他的相比确实挺多的，10M带宽还有待考量。
+* 重氪玩家有硬需求还是买台服务器算了，自带公网ip，但是花生壳慎重。
+
+日后还有什么好用的内网穿透工具还会再加的，大家有什么好用的也可以在评论区分享。
+
+​	
