--- a/source/_posts/内网穿透工具.md
+++ b/source/_posts/内网穿透工具.md
@@ -9,7 +9,7 @@ comments: true
 tags: 杂项
 photos: >-
   https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317004707.jpg
-abbrlink:
+abbrlink: 23841
 keywords:
 ---
 
