--- a/source/_posts/信号之谜.md
+++ b/source/_posts/信号之谜.md
@@ -7,8 +7,7 @@ authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: 杂项
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210507235144.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210507235144.jpg
 abbrlink: 22895
 keywords:
 ---
