--- a/source/_posts/北斗文献综述.md
+++ b/source/_posts/北斗文献综述.md
@@ -8,8 +8,7 @@ categories: 技术
 comments: true
 tags: 杂项
 description: 文献综述怎么写啊/(ㄒoㄒ)/~~
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105114700.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105114700.jpg
 abbrlink: 60871
 keywords:
 ---
