--- a/source/_posts/基于时频分析和卷积神经网路的模式识别.md
+++ b/source/_posts/基于时频分析和卷积神经网路的模式识别.md
@@ -7,8 +7,7 @@ categories: 转载
 comments: true
 tags: 论文
 description: 论文翻译
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317004208.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317004208.jpg
 abbrlink: 13246
 ---
 
