--- a/source/_posts/我就是马克思.md
+++ b/source/_posts/我就是马克思.md
@@ -7,8 +7,7 @@ authorLink: dummerfu.tk
 categories: 随笔
 comments: true
 tags: 随笔
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317004807.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317004807.jpg
 abbrlink: 15308
 keywords:
 ---
