--- a/source/_posts/深拷贝与浅拷贝.md
+++ b/source/_posts/深拷贝与浅拷贝.md
@@ -7,8 +7,7 @@ authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: python基础
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210125232959.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210125232959.jpg
 abbrlink: 12139
 description:
 keywords:
