--- a/source/_posts/线程与进程.md
+++ b/source/_posts/线程与进程.md
@@ -5,8 +5,7 @@ authorLink: dummerfu.tk
 comments: true
 abbrlink: 52642
 categories: 技术
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@master/img/20210125233756.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@master/img/20210125233756.jpg
 date: 2021-03-03 17:08:12
 tags:
 description:
