--- a/source/_posts/退役有感.md
+++ b/source/_posts/退役有感.md
@@ -7,8 +7,7 @@ authorLink: dummerfu.tk
 categories: 随笔
 comments: true
 tags: 随笔
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210403173535.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210403173535.jpg
 abbrlink: 11997
 description: 流水账，不要看
 keywords:
