--- a/source/_posts/分赌注问题.md
+++ b/source/_posts/分赌注问题.md
@@ -7,8 +7,7 @@ authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: 杂项
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210120201805.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210120201805.jpg
 abbrlink: 466
 keywords:
 ---
