--- a/source/_posts/线性规划.md
+++ b/source/_posts/线性规划.md
@@ -7,8 +7,7 @@ authorLink: dummerfu.tk
 categories: 技术
 comments: true
 tags: 杂项
-photos: >-
-  https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317005633.jpg
+photos: https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210317005633.jpg
 abbrlink: 40439
 keywords:
 ---
